<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.vidamrr.appclima.MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:text="@string/texto_grados"
        android:textColor="@color/color_grados"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGrados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/texto_ciudad"
        android:textColor="@color/color_ciudad"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCiudad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/texto_estatus"
        android:textColor="@color/color_estatus"
        android:textSize="24sp" />
</RelativeLayout>
